@@ -1,7 +1,9 @@
 Changes for 1.0.1.2
+* Fix bug [ 1668008 ] Fighter ability to move one space to land when CV is sunk (ComradeKev)
+
 * Fix territory connections in Pacific (ComradeKev)
 
-* Fix bug [1809209] transport retreat/die after unload leaves unloaded units in place (ComradeKev)
+* Fix bug [ 1809209 ] transport retreat/die after unload leaves unloaded units in place (ComradeKev)
 
 * Change BattleStepStrings names to match text for clarity (ComradeKev)
 
